--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,17 @@
 root = true
 
 [*]
-indent_size = 4
-indent_style = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
+
+[*.go]
+indent_style = tab
+indent_size = 8
+
+[*.yml]
+indent_style = space
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
