chore: change redis connection to use url

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,4 @@
 PORT=":8080"
-REDIS=":6379"
-REDIS_PASSWORD=redis_password
+REDIS_URL="redis://:redis_pass@localhost:6379"
 ACCESS_CONTROL_ORIGIN=http://localhost:5173
 ENV=development
