--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ services:
   redis:
     image: redis
     restart: always
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
-      REDIS_PASSWORD: redis_pass
-      REDIS_PORT: 6379
-      REDIS_DATABASES: 1
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - "6379:6379"
